[package]
name = "pk_edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
csv = "1.3.0"
lazy_static = "1.4.0"
serde_json = {version = "1.0.116", features = ["std"] }
thiserror = "1.0.58"
