[package]
name = "pk_edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
lcg-rand = "1.0.0"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = {version = "1.0.116", features = ["std"] }
thiserror = "1.0.58"
anyhow = "1.0"
